docker/envoy.yml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                      path: /var/log/envoy_access.log
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      cors:
                        allow_origin: ["*"]
                        allow_methods: GET, PUT, POST, OPTIONS, DELETE
                        allow_headers: content-type,origin,authorization,keep-alive
                        filter_enabled:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                          runtime_key: cors.hello.enabled
                      gzip:
                        memory_level: 2
                        min_content_length: 16
                        compression_level: BEST
                        compression_strategy: RLE
                        content_type:
                          - application/json
                          - text/plain
                        disable_on_etag_header: false
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_hello
                http_filters:
                  - name: envoy.cors
                  - name: envoy.gzip
                  - name: envoy.router
  clusters:
    - name: service_hello
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_hello
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8080
#      tls_context:
#        sni: localhost
      health_checks:
        - timeout: 3s
          interval: 15s
          interval_jitter: 5s
          unhealthy_threshold: 5
          healthy_threshold: 2
          http_health_check:
            path: "/health"

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9001
